--- a/src/styles/version-2/_register.scss
+++ b/src/styles/version-2/_register.scss
@@ -1,4 +1,4 @@
-@import "~vue-datetime/dist/vue-datetime.css";
+// @import "~vue-datetime/dist/vue-datetime.css";
 
 .register-v2 {
     position: relative;
