--- a/src/styles/partials/_contact-us.scss
+++ b/src/styles/partials/_contact-us.scss
@@ -84,6 +84,9 @@
                                 vertical-align: middle;
                                 display: inline-block;
                             }
+                            label {
+                                margin-left: 10px;
+                            }
                         }
                     }
 
@@ -110,6 +113,9 @@
 
                     a {
                         border-bottom: .1rem solid;
+                    }
+                    label {
+                        margin-left: 10px;
                     }
 
                     font-size: 2rem;
