--- a/src/styles/partials/_invest.scss
+++ b/src/styles/partials/_invest.scss
@@ -59,6 +59,7 @@
                 cursor: pointer;
                 font-size: 1.6rem;
                 color: rgba($black, .8);
+                margin-left: 10px;
 
                 a {
                     color: rgba($black, .8);
