--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -3,7 +3,6 @@
 //#TODO: resolve this 2 files
 
 //@import "~vue-cool-lightbox/dist/vue-cool-lightbox.min.css";
-//@import '~vue-slider-component/theme/default.css';
 @forward "./btn";
 @forward "./property-items";
 @forward "./input";
@@ -17,3 +16,4 @@
 @forward "./loading";
 @forward "./min-calc";
 @forward "./calculator-2024";
+@import 'vue-slider-component/theme/antd.css';
