fixing css file

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @use "@/styles/partials" as *;
 // layouts
 @use "@/styles/layouts" as *;
+
+//imports
+@import 'vue-slider-component/theme/antd.css';
