--- a/src/styles/utils/_elements.scss
+++ b/src/styles/utils/_elements.scss
@@ -354,7 +354,7 @@
 	&:before {
 		content: '';
 		//background-image: url("../images/check.png");
-		background-image: url("../images/v2/check.svg");
+		background-image: url("/template/images/v2/check.svg");
 		width: 2rem;
 		height: 2rem;
 		background-size: 100%;
